--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@ aria-label="Toggle navigation">
               <a class="nav-link" href="#inicio">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Sobre mi"> Sobre mi </a>
+              <a class="nav-link" href="#Sobremi"> Sobre mi </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Mis estudios">Mis estudios</a>
+              <a class="nav-link" href="#Misestudios">Mis estudios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Misultimostrabajos">Mis últimos trabajos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link"
@@ -73,7 +76,7 @@ href="https://nataliaoyanedel.typeform.com/to/eHRely">Contacto</a>
     </div>
 
 
-      <div class="texto-encima"> Yo soy </div>
+      <div id="Sobremi" class="texto-encima"> Yo soy </div>
       <div class="texto-encima2"><span>NATALIA</span> </div>
       <hr color="purple" size="8" width="2100">
   </div>
@@ -130,7 +133,7 @@ auctor aliquet.
   </section>
 
   <div class="container">
-    <div class="experiencia">
+    <div  id="Misestudios" class="experiencia">
       <h1> <span> Mis Estudios</span> </h1>
 
     </div>
@@ -166,7 +169,7 @@ auctor aliquet.
 
 
 
-  <div class="cards">
+  <div id="Misultimostrabajos"  class="cards">
     <h1><span>Mis últimos trabajos</span></h1>
     <div class="container">
 
@@ -174,8 +177,9 @@ auctor aliquet.
 
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="assets/img/meet_coffee.png"
-alt="Mi Imagen">
+            <a href="paginas/meet_coffee/index"><img class="card-img-top" src="assets/img/meet_coffee.png"
+              alt="Mi Imagen"></a>
+
             <div class="card-body">
               <h4 class="card-title">Meet & coffee</h4>
               <p class="card-text">Primer trabajo - Felis tincidunt
